fixing alignment in mobile screen

--- a/public/css/services.css
+++ b/public/css/services.css
@@ -127,6 +127,32 @@
 }
 
 @media (max-width: 991.98px) {
+    .service-benefit-card {
+        text-align: center;
+    }
+
+    .service-benefit-icon {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .service-process-step {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .service-process-number {
+        margin-right: 0 !important;
+        margin-bottom: 1rem;
+    }
+
+    .service-why-col .list-unstyled {
+        display: inline-block;
+        text-align: left;
+        max-width: 100%;
+    }
+
     .min-vh-service-hero {
         min-height: 60vh;
         padding: 100px 0 60px;
@@ -160,4 +186,5 @@
     .service-overview-media,
     .service-overview-img {
         min-height: 280px;
-    }}
+    }
+}
